Project

General

Profile

Actions

Bug #17306

closed

crushtool --compile is create output despite of missing item

Added by Kefu Chai over 7 years ago. Updated about 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
ceph cli
Target version:
-
% Done:

0%

Source:
Support
Tags:
Backport:
hammer jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Related issues 2 (0 open2 closed)

Copied to Ceph - Backport #17333: hammer: crushtool --compile is create output despite of missing itemResolvedNathan CutlerActions
Copied to Ceph - Backport #17334: jewel: crushtool --compile is create output despite of missing itemResolvedLoïc DacharyActions
Actions #1

Updated by Kefu Chai over 7 years ago

  • Status changed from In Progress to Fix Under Review
  • Source changed from other to Support
Actions #2

Updated by Kefu Chai over 7 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler over 7 years ago

  • Copied to Backport #17333: hammer: crushtool --compile is create output despite of missing item added
Actions #4

Updated by Nathan Cutler over 7 years ago

  • Copied to Backport #17334: jewel: crushtool --compile is create output despite of missing item added
Actions #6

Updated by Nathan Cutler about 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF