crush/CrushCompiler: error out as long as parse fails

do not output compiled crush map if anything goes wrong when parsing
crush map.

Fixes: http://tracker.ceph.com/issues/17306
Signed-off-by: Kefu Chai <kchai@redhat.com>
(cherry picked from commit b2c0a079dc074c907e1bc429861230096534f597)

Conflicts:
    src/test/cli/crushtool/compile-decompile-recompile.t (hammer needs $TESTDIR/ prefix)